<resources>
    <string name="app_name">Modul_2</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="logo">logo1</string>
    <string name="email">E-mail</string>
    <string name="Password1">Password</string>
    <string name="btn1">Enter Your House</string>
    <string name="smart">Smart House</string>
    <string name="btn2">New Residents</string>
    <string name="Rooms">Rooms</string>
</resources>